update: forget password flow with key, chore: error response
