# module/authentication/model/response/ResetPasswordResponse.go
@@ -1,0 +1,5 @@
+package response
+
+type ResetPasswordResponse struct {
+	Message string `json:"message"`
+}
